--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="root">
+    <header class="annotation">
+      <img class="annotation__img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
+      <a class="annotation__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <main class="main">
+      <section id="add" class="add">
+        <label class="add-title" for="new-task">Add Item</label>
+        <div class="input-form">
+          <input id="new-task" class="input" type="text">
+          <button id="add-btn" class="btn">Add</button>
         </div>
       </section>
       <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
+        <h3 class="title">Todo</h3>
+        <ul id="incomplete" class="list">
+          <li class="list__item">
+            <input class="checkbox" type="checkbox">
+            <label class="label">Pay Bills</label>
+            <input class="input" type="text">
+            <button class="btn">Edit</button>
             <button class="delete">
-              <img src="./remove.svg" alt="remove button">
+              <img class="delete__img" src="./remove.svg" alt="remove button">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
+          <li class="list__item list__item_edit">
+            <input class="checkbox" type="checkbox">
+            <label class="label">Go Shopping</label>
+            <input class="input" type="text" value="Go Shopping">
+            <button class="btn">Save</button>
             <button class="delete">
-              <img src="./remove.svg" alt="remove button">
+              <img class="delete__img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
       </section>
       <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
+        <h3 class="title">Completed</h3>
+        <ul id="complete" class="list">
+          <li class="list__item list__item_complete">
+            <input class="checkbox" type="checkbox" checked>
+            <label class="label">See the Doctor</label>
+            <input class="input" type="text">
+            <button class="btn">Edit</button>
             <button class="delete">
-              <img src="./remove.svg" alt="remove button">
+              <img class="delete__img" src="./remove.svg" alt="remove button">
             </button>
           </li>
         </ul>
