--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="main">
       <section id="add" class="add">
-        <label class="add-title" for="new-task">Add Item</label>
+        <label class="add__title" for="new-task">Add Item</label>
         <div class="input-form">
           <input id="new-task" class="input" type="text">
           <button id="add-btn" class="btn">Add</button>
